# ark

./: .gitignore  Cargo.toml  LICENSE  README.md  SYNTAX.MD  a.wat  b.wat  debug.html  imports.wit  main.ark  module.bc  output.wat  test  test.aot  test.arkmodule  wit-superset.ark
ark-language-server/: Cargo.toml
ark-language-server/src/: main.rs  symbols.rs
compiler/arkc/: Cargo.toml
compiler/arkc-ast-lowering/: Cargo.toml
compiler/arkc-ast-lowering/src/: lib.rs  lowering.rs
compiler/arkc-bytecode/: Cargo.toml
compiler/arkc-bytecode/src/: data.rs  lib.rs  program.rs  tests.rs  ty.rs  writer.rs
compiler/arkc-codegen-bc/: Cargo.toml
compiler/arkc-codegen-bc/src/: generator.rs  lib.rs
compiler/arkc-codegen-bc/src/generator/: expr.rs
compiler/arkc-codegen-llvm/: Cargo.toml
compiler/arkc-codegen-llvm/src/: lib.rs  scopes.rs  top_level.rs  util.rs
compiler/arkc-codegen-wasm/: Cargo.toml
compiler/arkc-codegen-wasm/src/: lib.rs  scopes.rs  util.rs
compiler/arkc-codegen-wasm/wat/: memory.wat  test.wat
compiler/arkc-frontend/: Cargo.toml  build.rs
compiler/arkc-frontend-alt/: Cargo.toml
compiler/arkc-frontend-alt/src/: hir.rs  interner.rs  lib.rs  program_parser.rs  sema.rs  sym.rs  useck.rs
compiler/arkc-frontend-alt/src/error/: diag.rs  msg.rs
compiler/arkc-frontend-alt/src/hir/: file.rs  fn.rs  id.rs  lower.rs  modules.rs  packages.rs
compiler/arkc-frontend/src/: access.rs  compilation.rs  error.rs  fctdef_check.rs  fndefcheck.rs  generator.rs  hir.rs  interner.rs  known.rs  lib.rs  operator_registry.rs  program_parser.rs  program_parser_alt.rs  readty.rs  resolve.rs  return_check.rs  sema.rs  specialize.rs  stdlib_lookup.rs  strudefcheck.rs  sym.rs  test.rs  ty.rs  typecheck.rs  useck.rs
compiler/arkc-frontend/src/compilation/: modules.rs
compiler/arkc-frontend/src/error/: diag.rs  msg.rs
compiler/arkc-frontend/src/generator/: expr.rs  tests.rs
compiler/arkc-frontend/src/sema/: functions.rs  known.rs  modules.rs  source_files.rs  visibility.rs
compiler/arkc-frontend/src/typecheck/: call.rs  expr.rs  function.rs  literals.rs  lookup.rs  stmt.rs
compiler/arkc-hir/: Cargo.toml
compiler/arkc-hir/src/: hir.rs  hir_map.rs  lib.rs  parsety.rs  ty.rs
compiler/arkc-hir/src/hir/: hir_id.rs  hir_node.rs  module.rs  visit.rs
compiler/arkc-infer/: Cargo.toml
compiler/arkc-parser/: Cargo.toml
compiler/arkc-parser/src/: ast.rs  error.rs  green.rs  lexer.rs  lib.rs  parser.rs  source_file.rs  span.rs  token.rs
compiler/arkc-parser/src/ast/: dump.rs  visit.rs
compiler/arkc/src/: driver.rs  main.rs
compiler/arkc/src/driver/: cmd.rs  start.rs
editors/code/: .vscodeignore  README.md  package.json  pnpm-lock.yaml  tsconfig.json
editors/code/src/: extension.ts
editors/code/syntaxes/: ark.tmLanguage.json
examples/: branch.json  for_each.json  test.ark  test2.ark
examples/source/: branch.ark  transform.ark  trasform.ark
experiment/arkc-bytecode/src/: builder.rs  dumper.rs  reader.rs  writer.rs
experiment/arkc-codegen-bc/: Cargo.toml
experiment/arkc-codegen-bc/src/generator/: tests.rs
experiment/arkc-frontend/: Cargo.toml
experiment/arkc-frontend/src/: hir_id.rs  import_check.rs  program_parser.rs  readty.rs  sema.rs  sym.rs  ty.rs  typecheck.rs
experiment/arkc-frontend/src/error/: diag.rs  mod.rs
experiment/arkc-frontend/src/sema/: known.rs  src.rs
experiment/arkc-frontend/src/typecheck/: call.rs  control.rs  expr.rs
experiment/arkc-frontend/stdlib/: stdlib.dora
experiment/flow-parser/src/: error.rs  parse_flow.rs  parser.rs  tree.rs
flow-parser/: Cargo.toml
flow-parser/src/: lib.rs  red.rs
frontend-old/: Cargo.toml
frontend-old/src/: ast.rs  codegen.rs  lexer.rs  main.rs  msg.rs  parser.rs  token.rs
runtime/ark-rt/: Cargo.toml
runtime/ark-rt-staticlib/: Cargo.toml
runtime/ark-rt-staticlib/src/: lib.rs
runtime/ark-rt/src/: lib.rs
runtime/ark-vm/: Cargo.toml
runtime/ark-vm/src/: builder.rs  code.rs  frame.rs  instruction.rs  lib.rs  operand.rs  stack.rs  table.rs  vm.rs  write_many_table.rs  write_once_table.rs
runtime/ark-vm/src/code/: debug.rs  tests.rs
vm/: Cargo.toml
vm/src/: builtins.rs  interp.rs  lib.rs  main.rs  opcode.rs  reader.rs  writer.rs
