[workspace]
members = [
  #"experiment/flow-parser",
  "ark-language-server",
  #"experiment/arkc-frontend",
  #"experiment/arkc-codegen-bc",
  "compiler/arkc",
  "compiler/arkc-ast-lowering",
  "compiler/arkc-infer",
  "compiler/arkc-hir",
  "compiler/arkc-codegen-llvm",
  "compiler/arkc-codegen-bc",
  "compiler/arkc-frontend",
  "compiler/arkc-parser",
  "compiler/arkc-bytecode",
  "runtime/ark-rt",
  "runtime/ark-vm",
  "runtime/ark-rt-staticlib",
]
resolver = "2"
