[package]
name = "ark-language-server"
version = "0.0.2"
authors = ["Dominik Inführ <dominik.infuehr@gmail.com>"]
description = "The Ark programming language"
homepage = "https://github.com/szkabaroli/ark"
repository = "https://github.com/szkabaroli/ark"
license = "MIT"
edition = "2021"

[dependencies]
parser = { path = "../compiler/arkc-parser", version = "0.0.2" }
arkc-frontend = { path = "../compiler/arkc-frontend", version = "0.0.2" }
lsp-server = "0.7.2"
lsp-types = "0.94.0"
serde_json = "*"
serde = "*"
threadpool = "*"
crossbeam = "*"
walkdir = "*"
log = "*"
env_logger = "*"