[package]
name = "jazzlight"
version = "0.1.0"
authors = ["Adel Prokurov <adel.prokurov@protonmail.com>"]
edition = "2021"

[dependencies]
thiserror="1.0"
time = "0.3"
parking_lot = "0.12"
lazy_static = "1.4"
rand = "0.8"
mimalloc = "0.1"
hashlink = "0.9"
byteorder = "1.3"
libloading = "0.5"
mopa = "0.2"
structopt = "0.3"

[profile.release]
lto = true
panic = 'abort'