[package]
authors = []
edition = "2021"
name = "arkc-codegen-bc"
version = "0.0.2"

[dependencies]
ark-vm = {path = "../../runtime/ark-vm"}
arkc-bytecode = {path = "../arkc-bytecode"}
arkc-frontend = {path = "../arkc-frontend"}
arkc-hir = {path = "../arkc-hir"}
bincode = { version = "2.0.0-rc.3"}

[profile.release]
lto = true
panic = 'abort'
