[package]
authors = []
edition = "2021"
name = "arkc-frontend"
version = "0.0.2"

[dependencies]
id-arena = "*"
parking_lot="*"
parser = {path = "../arkc-parser"}
arkc-hir = {path = "../arkc-hir"}
arkc-ast-lowering = {path = "../arkc-ast-lowering"}
serde="1.0"
bincode={version = "2.0.0-rc.3"}

[profile.release]
lto = true
panic = 'abort'
