[package]
authors = []
edition = "2021"
name = "arkc"
version = "0.0.2"

[dependencies]
anstyle = "1.0"
arkc-codegen-llvm = {path = "../arkc-codegen-llvm", optional = true}
arkc-codegen-bc = {path = "../arkc-codegen-bc", optional = true}
arkc-frontend = {path = "../arkc-frontend"}
bincode = "2.0.0-rc.3"
clap = {version = "4.5", features = ["derive"]}
id-arena="*"

[profile.release]
lto = true
panic = 'abort'

[features]
default = ["llvm", "bc"]
llvm = ["arkc-codegen-llvm"]
bc = ["arkc-codegen-bc"]
