[package]
authors = []
edition = "2021"
name = "arkc"
version = "0.0.2"

[dependencies]
anstyle = "1.0"
arkc-codegen-llvm = {path = "../arkc-codegen-llvm", optional = true}
arkc-codegen-wasm = {path = "../arkc-codegen-wasm", optional = true}
arkc-frontend = {path = "../arkc-frontend"}
bincode = "2.0.0-rc.3"
clap = {version = "4.5", features = ["derive"]}
id-arena="*"

[profile.release]
lto = true
panic = 'abort'

[features]
default = ["wasm"]
llvm = ["arkc-codegen-llvm"]
wasm = ["arkc-codegen-wasm"]